07_Kebernetes/task6/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
  labels:
    app: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-content # ПОДКЛЮЧЕНИЕ ConfigMap
          mountPath: /usr/share/nginx/html
          readOnly: true
      - name: multitool
        image: wbitt/network-multitool
        command: ["/bin/sh", "-c", "sleep infinity"]
      volumes:
      - name: web-content
        configMap:
          name: web-page-config # УКАЖИТЕ имя созданного ConfigMap
          items:
          - key: index.html
            path: index.html

---
apiVersion: v1 
kind: Service 
metadata:
  name: web-app-svc
spec:
  selector:
    app: web-app
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80 
    nodePort: 30080 # Статический порт для удобства доступа
